src/gateaway/manifests/gateaway-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateaway
  labels:
    app: gateaway
spec:
  replicas: 2
  selector:
    matchLabels:
      app: gateaway
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 3
  template:
    metadata:
      labels:
        app: gateaway
    spec:
      containers:
        - name: gateaway
          image: cici000/gateaway
