src/gateaway/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateaway
spec:
  selector:
    app: gateaway
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
